2017-08-15  ripper  <tino@ripper.03.softkill.net>

	* sock_select_old.h (tino_sock_new_fdANn): now returns NULL in
	case of fd<0, so signature was changed from tino_sock_new_fdAn

2017-08-06  ripper  <tino@ripper.03.softkill.net>

	* Makefile.proto: Allow extension of standard rules by using ::

2016-12-11  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* io.h (IO): fix define of IO

	* Makefile-test.sh (gencc): output position of logfile vor easy
	copy-n-paste

	* sysfix.h (TINO_INLINE): TINO_INLINE corrected, so INLINEs become
	DRY (to fix IGUR and other inlines, like in io.h)

	* debug.h: Instantiate IGUR(), see http://stackoverflow.com/a/16245669

	* proc.h (tino_fd_move): number of FDs corrected, as the limit can
	be reached without harm (I hope).

2016-08-28  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* sock_tool.h (tino_sock_wrapO): changed, such that it can handle
	input and output at once.

	* signals.h (tino_sigchld_ignored, tino_sigchld_checked)
	(tino_sigchld_fatal): convenience SIGCHLD handlers added

	* sockbuf.h (tino_sockbuf_inO): suppress warning about nonstatic
	inline.

2015-12-06  Valentin Hilbig  <tino@build.03.softkill.net>

	* Makefile-tests.sh (run): Fix shell globbing bug (perhaps change
	again in future to use eval)

2015-12-06  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* data.h: changed "user" parameter to tino_data_user and added
	tino_data_user_NULL() and similar converter functions.

	* proc.h (tino_daemonize_pidOb): suppress waning with IGUR

	* debug.h (IGUR): added dummy to ignore things

2015-11-28  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* sysfix_osx.h (TINO_NO_O_DIRECT): added

	* Makefile-tests.sh (cmp-RUN): more escapes

	* xml.h (tino_xml_write): make "make test" happy

	* data.h (tino_data_user): using union instead of void pointer to
	make compiler happy.

	* sysfix.h: linux specfic things are now in sysfix_linux.h

	* sysfix_linux.h: added
